@@ -4,6 +4,7 @@ Overview of changes in lightdm 1.1.1
     * Add note to AUTHORS file where to find author list
     * Update build system to find moc/uic
     * Fix non-distributed tests/src/lightdm-session
+    * Fix X sessions with arguments in Exec not working
 
 Overview of changes in lightdm 1.1.0
 
